--- a/PhunCollectionView/Info.plist
+++ b/PhunCollectionView/Info.plist
@@ -43,5 +43,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.phunware.Deeplink</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>Deeplink</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
